--- a/help.html
+++ b/help.html
@@ -137,6 +137,7 @@
 .text-block {
   position: absolute;
   top: 50%;
+  width: 33%
   text-align:center;
   background-color: black;
   color: white;
@@ -149,8 +150,8 @@
  <div class="container">
   <img src="ScitechWebmaster.github.io/Photos Used/help2.jpg" alt="Her Concert!" style="width:100%;">
   <div class="text-block">
-    <h4>Missing Tickets? Don't Know How to Order Merchandise?</h4>
-    <p>We can help.</p>
+    <h1>Missing Tickets? Don't Know How to Order Merchandise?</h1>
+    <h3>We can help.</h3>
   </div>
 </div> 
 
