--- a/help.html
+++ b/help.html
@@ -135,10 +135,12 @@
 
 /* Bottom right text */
 .text-block {
+  font-family: "Arial", Helvetica, sans-serif;
   position: absolute;
   top: 50%;
   width: 33%
   text-align:center;
+  opacity: 0.5;
   background-color: black;
   color: white;
   padding-left: 20px;
@@ -150,8 +152,8 @@
  <div class="container">
   <img src="ScitechWebmaster.github.io/Photos Used/help2.jpg" alt="Her Concert!" style="width:100%;">
   <div class="text-block">
-    <h1>Missing Tickets? Don't Know How to Order Merchandise?</h1>
-    <h3>We can help.</h3>
+    <h2>Missing Tickets? Don't Know How to Order Merchandise?</h2>
+    <h4>We can help.</h4>
   </div>
 </div> 
 
