--- a/help.html
+++ b/help.html
@@ -138,7 +138,8 @@
   font-family: "Arial", Helvetica, sans-serif;
   position: absolute;
   top: 50%;
-  width: 33%
+  height: auto;
+  width: 33%;
   text-align:center;
   opacity: 0.8;
   background-color: black;
