--- a/songs.html
+++ b/songs.html
@@ -14,7 +14,7 @@
     <div class="dropdown-content">
       <a href="ScitechWebmaster.github.io/worklog.pdf">Work Log</a>
       <a href="#">Copy Right Checklist</a>
-      <a href="#">LEAP Form</a>
+      <a href="ScitechWebmaster.github.io/LEAP.pdf">LEAP Form</a>
     </div>
   </div> 
   
