--- a/songs.html
+++ b/songs.html
@@ -13,7 +13,7 @@
     </button>
     <div class="dropdown-content">
       <a href="ScitechWebmaster.github.io/worklog.pdf">Work Log</a>
-      <a href="#">Copy Right Checklist</a>
+      <a href="ScitechWebmaster.github.io/CopyRight&tPhotoRelease.pdf">Copy Right Checklist</a>
       <a href="ScitechWebmaster.github.io/LEAP.pdf">LEAP Form</a>
     </div>
   </div> 
