--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <DOCTYPE! html>
 <html>
 <head>
+<html lang="en-US">
 <div class="topnav" id="myTopnav">
   <a href="index.html" class="active">Home</a>
   <a href="bio.html">About</a>
