--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <a href="shop.html">Shop</a> 
   <a href="events.html">Events</a>
   <a href="help.html">Help</a> 
+  <a href="team.html">Meet the Team</a> 
   <div class="dropdown">
     <button class="dropbtn">More 
       <i class="fa fa-caret-down"></i>
