--- a/events.html
+++ b/events.html
@@ -8,6 +8,7 @@
   <a href="shop.html">Shop</a> 
   <a href="events.html"class="active">Events</a>
   <a href="help.html">Help</a> 
+  <a href="team.html">Team</a> 
   <div class="dropdown">
     <button class="dropbtn">More 
       <i class="fa fa-caret-down"></i>
