--- a/help.html
+++ b/help.html
@@ -8,6 +8,7 @@
   <a href="shop.html">Shop</a> 
   <a href="events.html">Events</a>
   <a href="help.html"class="active">Help</a>
+  <a href="team.html">Team</a> 
   <div class="dropdown">
     <button class="dropbtn">More 
       <i class="fa fa-caret-down"></i>
