--- a/shop.html
+++ b/shop.html
@@ -8,6 +8,7 @@
   <a href="shop.html"class="active">Shop</a> 
   <a href="events.html">Events</a>
   <a href="help.html">Help</a> 
+  <a href="team.html">Team</a> 
   <div class="dropdown">
     <button class="dropbtn">More 
       <i class="fa fa-caret-down"></i>
