--- a/events.html
+++ b/events.html
@@ -20,13 +20,13 @@
     </div>
   </div> 
   
-  /*Added by Hannah*/
-  <link href="team.css" rel="stylesheet" type="text/css">
+ 
+  <link href="events.css" rel="stylesheet" type="text/css">
   
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
   
-  /* for the popups*/
+
   <script>
 // When the user clicks on <div>, open the popup
 function myFunction() {
@@ -34,7 +34,7 @@ function myFunction() {
   popup.classList.toggle("show");
 }
 </script>
- /*popup code ends*/
+
   
   
   
