--- a/shop.html
+++ b/shop.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-
+<head>
   <div class="topnav" id="myTopnav">
   <a href="index.html">Home</a>
   <a href="bio.html">About</a>
@@ -128,7 +128,7 @@
   }
 }
   
-<head>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Official Shop</title>
@@ -137,80 +137,68 @@
 
 <body>
 
-<div class="grid">
-<div class="header">
-  
-</div>
 
-<div class="menu">
-    <img scr="shopping cart.png" alt="Shopping Cart">
-</div>
+  
+  <section id="section-b">
+		<p align="center">
+		<br />
+	<h1>OFFICIAL MERCHANDISE</h1>
+		<br />
+		<br />
+			Thank you for buying!!! -H
+		</p>
+	</section>
+	<section id="section-c">
+	<div class="box-1">
 
-<div class="banner">
+	</div>
+	<div class="box-2">
 
-</div>
-  
-<div class="album1">
-    	<li><a href=" "> Album</a></li>
-</div>
+	</div>
+		<div class="box-3">
+	
+	</div>
+		
+	</section>
+	
+	<section id="section-d">
 
-<div class="album2">
-      <li><a href=" "> Album 2</a></li>
-</div>
-  
-<div class="tickets">
-      <li><a href=" "> Tickets</a></li>
-</div>
+<section id="section-d">
 
-<div class="shirts">
-      <li><a href=" "> Shirts</a></li>
-</div>
+		<div class="box-4">
+			<p> TOKYO TOUR
+		<br />
+		The limited edition Tokyo Tour shirt comes from the Minimalism© line in its signature white.
+		</p>
+		
 
-<div class="necklaces">
-      <li><a href=" "> Necklaces</a></li>
-</div>
+		</div>
 
-<div class="bracelets">
-      <li><a href=" "> Bracelets</a></li>
-</div>
+		<div class="box-5">
 
-<div class="lightsticks">
-      <li><a href=" "> Lightsticks</a></li>
-</div>
+			<p> MINIMALISM© Sticker
+		<br />
+	Signature laptop sticker of Hazel brought to you by the FIERCExHazel line.
+		</p>
 
-<div class="posters">
-      <li><a href=" "> Posters</a></li>
-</div>
-  
-<div class="sold out">
-      <li><a href=" "> Soldout</a></li>
-</div>
-  
-<div class="limited edition">
-      <li><a href=" "> Limited Edition</a></li>
-</div>
-  </div>
-  
-  /*All the current code that actually does stuff begins here */
- <button class="btn"><i class="btn">Cart</i></button>
+		</div>
+
+		<div class="box-6">
+			<p> Ringed Cap
+		<br />
+		A FIERCExHazel line cap. The legendary cap that sold out in seconds last time it was avaliable.
+		</p>
+
+		</div>
+
+	</section>
   
   
   
-/* INSERT FOOTER HERE */
-<footer>
   
- <li> <a href=" "> Home</a></li>   /*INSERT ALL OF THE LINKS */
   
- <li> <a href=" "> Home</a></li>
   
- <li> <a href=" "> Home</a></li>
   
- <li> <a href=" "> Home</a></li>
-  
- <li> <a href=" "> Home</a></li>
- 
-   <a class="white-text position-center">Chapter ID: </a> /* INSERT THE CHAPTER ID HERE */
-  </footer>
 </body>
 
 </html>
