--- a/team.html
+++ b/team.html
@@ -158,7 +158,7 @@
 	<h1>Meet the Team</h1>
 		<br />
 		<br />
-			We are the team behind "Artist".
+			We are the team behind "Hazel".
 		</p>
 	</section>
   
