--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ body, html {
 <div class="bg-image img5"></div>
 <div class="bg-image img6"></div>
 
-<div class="bg-text">Artist</div>
+<div class="bg-text">Hazel</div>
   
 
 
