--- a/shop.html
+++ b/shop.html
@@ -135,17 +135,17 @@
 
 <body>
 
-
-  
-  <section id="section-b">
+<section id="section-b">
 		<p align="center">
 		<br />
-	<h1>OFFICIAL MERCHANDISE</h1>
+	<h1>Meet the Team</h1>
 		<br />
 		<br />
-			Thank you for buying!!! -H
+			We are the team behind "Hazel".
 		</p>
 	</section>
+  
+  
 	<section id="section-c">
 	<div class="box-1">
 
@@ -161,12 +161,10 @@
 	
 	<section id="section-d">
 
-<section id="section-d">
-
 		<div class="box-4">
-			<p> TOKYO TOUR
+			<p> Hannah Garcia
 		<br />
-		The limited edition Tokyo Tour shirt comes from the Minimalism© line in its signature white.
+		Positions: Team Leader, Presenter, Researcher, HTML & CSS Programmer, Media Specialist, HTML team specialist.
 		</p>
 		
 
@@ -174,28 +172,23 @@
 
 		<div class="box-5">
 
-			<p> MINIMALISM© Sticker
+			<p> Caleb Gomez
 		<br />
-	Signature laptop sticker of Hazel brought to you by the FIERCExHazel line.
+		Positions: Assistant-Leader, Presenter, Researcher, HTML & CSS Programmer, and HTML team specialist.
 		</p>
 
 		</div>
 
 		<div class="box-6">
-			<p> Ringed Cap
+			<p> Kashish Kumar
 		<br />
-		A FIERCExHazel line cap. The legendary cap that sold out in seconds last time it was avaliable.
+		Positions: Member, Presenter, HTML & CSS Programmer, and CSS specialist.
 		</p>
 
 		</div>
 
 	</section>
-  
-  
-  
-  
-  
-  
+	
   
 </body>
 
