--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>The Team</title>
+<title>THE ONLY PLACE TO GET HAZEL OFFICIAL MERCHANDISE</title>
 <link href="shop.css" rel="stylesheet" type="text/css">	
 	
   <html lang="en-US">	
@@ -152,17 +152,17 @@
 
 <body>
 
-<section id="section-b">
+
+  
+  <section id="section-b">
 		<p align="center">
 		<br />
-	<h1>Meet the Team</h1>
+	<h1>OFFICIAL MERCHANDISE</h1>
 		<br />
 		<br />
-			We are the team behind "Hazel".
+			Thank you for buying!!! -H
 		</p>
 	</section>
-  
-  
 	<section id="section-c">
 	<div class="box-1">
 
@@ -178,10 +178,12 @@
 	
 	<section id="section-d">
 
+<section id="section-d">
+
 		<div class="box-4">
-			<p> Hannah Garcia
+			<p> TOKYO TOUR
 		<br />
-		Positions: Team Leader, Presenter, Researcher, HTML & CSS Programmer, Media Specialist, HTML team specialist.
+		The limited edition Tokyo Tour shirt comes from the Minimalism© line in its signature white.
 		</p>
 		
 
@@ -189,24 +191,30 @@
 
 		<div class="box-5">
 
-			<p> Caleb Gomez
+			<p> MINIMALISM© Sticker
 		<br />
-		Positions: Assistant-Leader, Presenter, Researcher, HTML & CSS Programmer, and HTML team specialist.
+	Signature laptop sticker of Hazel brought to you by the FIERCExHazel line.
 		</p>
 
 		</div>
 
 		<div class="box-6">
-			<p> Kashish Kumar
+			<p> Ringed Cap
 		<br />
-		Positions: Member, Presenter, HTML & CSS Programmer, and CSS specialist.
+		A FIERCExHazel line cap. The legendary cap that sold out in seconds last time it was avaliable.
 		</p>
 
 		</div>
 
 	</section>
-	
+  
+  
+  
+  
+  
+  
   
 </body>
+  
 
 </html>
