--- a/shop.html
+++ b/shop.html
@@ -148,6 +148,16 @@
   
   </script>
 	  
+<script>
+// When the user clicks on <div>, open the popup
+function myFunction() {
+  var popup = document.getElementById("myPopup");
+  popup.classList.toggle("show");
+}
+</script>
+	  
+	  
+	  
 </head>
 
 <body>
@@ -188,6 +198,10 @@
 		
 
 		</div>
+	
+<div class="popup" onclick="myFunction()">Click me!
+  <span class="popuptext" id="myPopup">Popup text...</span>
+</div> 
 
 		<div class="box-5">
 
