--- a/help.html
+++ b/help.html
@@ -131,13 +131,13 @@
   /*Where the css for the information boxes goes*/
  /* Container holding the image and the text */
 .container {
-  position: relative;
+  position: center;
 }
 
 /* Bottom right text */
 .text-block {
   font-family: "Arial", Helvetica, sans-serif;
-  position: absolute;
+  position: center;
   top: 50%;
   height: auto;
   width: 33%;
@@ -151,6 +151,19 @@
   </style>
  <body>
 
+ <form action="/action_page.php">
+  First and Last Name: <input type="text" name="fname"><br>
+ </form>
+
+ <form action="/action_page.php">
+  Any comments or concerns?: <input type="text" name="fname"><br>
+ </form>
+
+
+ <p>Contact (956)785-468 company number or via email Hazelcorp.1@gmail.com
+ </p>
+   
+   
  <div class="container">
   <img src="ScitechWebmaster.github.io/Photos Used/help2.jpg" alt="Her Concert!" style="width:100%;">
   <div class="text-block">
