--- a/help.html
+++ b/help.html
@@ -151,7 +151,14 @@
   </style>
  <body>
 
-   
+
+  First and Last Name: <input type="text" name="fname"><br>
+
+
+  Any comments or concerns?: <input type="text" name="fname"><br>
+
+ <p>Contact (956)785-468 company number or via email Hazelcorp.1@gmail.com
+ </p>
    
  <div class="container">
   <img src="ScitechWebmaster.github.io/Photos Used/help2.jpg" alt="Her Concert!" style="width:100%;">
