--- a/help.html
+++ b/help.html
@@ -151,12 +151,12 @@
   </style>
  <body>
 
-
+  <form action="/response.php">
   First and Last Name: <input type="text" name="fname"><br>
-
-
+   </form>
+  <form action="/response.php">
   Any comments or concerns?: <input type="text" name="fname"><br>
-
+   </form>
  <p>Contact (956)785-468 company number or via email Hazelcorp.1@gmail.com
  </p>
    
