--- a/team.html
+++ b/team.html
@@ -159,6 +159,8 @@
 		<br />
 		<br />
 			We are the team behind "Hazel".
+	<br />
+	A group of freshmen hopeful for a career in technology.
 		</p>
 	</section>
   
@@ -181,7 +183,7 @@
 		<div class="box-4">
 			<p> Hannah Garcia
 		<br />
-		Positions: Team Leader, Presenter, Researcher, HTML & CSS Programmer, Media Specialist, HTML team specialist.
+		Positions: Team Leader, Presenter, HTML & CSS Programmer, Media Specialist, HTML team specialist.
 		</p>
 		
 
@@ -191,7 +193,7 @@
 
 			<p> Caleb Gomez
 		<br />
-		Positions: Assistant-Leader, Presenter, Researcher, HTML & CSS Programmer, and HTML team specialist.
+		Positions: Assistant-Leader, Presenter, HTML & CSS Programmer, and HTML team specialist.
 		</p>
 
 		</div>
@@ -199,7 +201,7 @@
 		<div class="box-6">
 			<p> Kashish Kumar
 		<br />
-		Positions: Member, Presenter, HTML & CSS Programmer, and CSS specialist.
+		Positions: Member, Presenter, HTML & CSS Programmer, JavaScript Specialist, and CSS specialist.
 		</p>
 
 		</div>
