--- a/response.html
+++ b/response.html
@@ -6,8 +6,8 @@
 <h1>Response Page</h1>
 <p>Thank you for your response</p> 
 <?php
-echo "Hello World!"; 
+echo $_GET["fname"]; 
 ?> 
-<p>we will get right back to you one a provider is available</p>
+<p>we will get right back to you once a provider is available</p>
 </body>
 </html>
