--- a/response.html
+++ b/response.html
@@ -8,6 +8,11 @@
 <?php
 echo $_GET["fname"]; 
 ?> 
-<p>we will get right back to you once a provider is available</p>
+<p>We will get right back to you once a provider is available.</p>
+  
+ <?php
+echo $_GET["cc"]; 
+?> 
+  <p>Thanks for the comment or consern we'll get back to you momentarily.</p>
 </body>
 </html>
