--- a/help.html
+++ b/help.html
@@ -155,7 +155,7 @@
   First and Last Name: <input type="text" name="fname"><br>
    </form>
   <form action="/response.html" method="get">
-  Any comments or concerns?: <input type="text" name="fname"><br>
+  Any comments or concerns?: <input type="text" name="cc"><br>
    </form>
  <p>Contact (956)785-468 company number or via email Hazelcorp.1@gmail.com
  </p>
