--- a/response.html
+++ b/response.html
@@ -14,5 +14,26 @@ echo $_GET["fname"];
 echo $_GET["cc"]; 
 ?> 
   <p>Thanks for the comment or consern we'll get back to you momentarily.</p>
+  <form action="/home.html">
+<input type="submit" value="Home">
+    </form>
+  <form action="/bio.html">
+<input type="submit" value="About">
+    </form>
+  <form action="/songs">
+<input type="submit" value="Songs">
+  </form>
+  <form action="/shop">
+<input type="submit" value="Shop">
+  </form>
+  <form action="/events">
+<input type="submit" value="Events">
+  </form>
+  <form action="/help">
+<input type="submit" value="Help">
+  </form>
+  
+  
+  
 </body>
 </html>
