--- a/response.html
+++ b/response.html
@@ -14,7 +14,7 @@ echo $_GET["fname"];
 echo $_GET["cc"]; 
 ?> 
   <p>Thanks for the comment or consern we'll get back to you momentarily.</p>
-  <form action="/home.html">
+  <form action="/index.html">
 <input type="submit" value="Home">
     </form>
   <form action="/bio.html">
