--- a/help.html
+++ b/help.html
@@ -131,13 +131,13 @@
   /*Where the css for the information boxes goes*/
  /* Container holding the image and the text */
 .container {
-  position: center;
+  position: relative;
 }
 
 /* Bottom right text */
 .text-block {
   font-family: "Arial", Helvetica, sans-serif;
-  position: center;
+  position: absolute;
   top: 50%;
   height: auto;
   width: 33%;
