--- a/help.html
+++ b/help.html
@@ -151,6 +151,7 @@
   </style>
  <body>
 
+  <article> 
   <form action="/response.html" method="get">
   First and Last Name: <input type="text" name="fname"><br>
    </form>
@@ -159,7 +160,7 @@
    </form>
  <p>Contact (956)785-468 company number or via email Hazelcorp.1@gmail.com
  </p>
-   
+   </article>
  <div class="container">
   <img src="ScitechWebmaster.github.io/Photos Used/help2.jpg" alt="Her Concert!" style="width:100%;">
   <div class="text-block">
