--- a/help.html
+++ b/help.html
@@ -132,6 +132,7 @@
  /* Container holding the image and the text */
 .container {
   position: relative;
+  width: 50%;
 }
 
 /* Bottom right text */
