--- a/help.html
+++ b/help.html
@@ -151,12 +151,18 @@
   </style>
  <body>
 
-
+   <h2>Contact Info or Quick Response</h2>
   <form action="/response.html" method="get">
-  First and Last Name: <input type="text" name="fname"><br>
+  First Name: <input type="text" name="fname"><br>
+   </form>
+   <form action="/response.html" method="get">
+  Last Name: <input type="text" name="lname"><br>
    </form>
   <form action="/response.html" method="get">
   Any comments or concerns?: <input type="text" name="cc"><br>
+   </form>
+   <form action="/response.html" method="get">
+  Contact Info.: <input type="text" name="ci"><br>
    </form>
  <p>Contact (956)785-468 company number or via email Hazelcorp.1@gmail.com
  </p>
