--- a/response.html
+++ b/response.html
@@ -8,12 +8,19 @@
 <?php
 echo $_GET["fname"]; 
 ?> 
+  <?php
+echo $_GET["lname"]; 
+?> 
 <p>We will get right back to you once a provider is available.</p>
   
  <?php
 echo $_GET["cc"]; 
 ?> 
   <p>Thanks for the comment or consern we'll get back to you momentarily.</p>
+  <?php
+echo $_GET["ci"]; 
+?> 
+  <p>CONTACT INFO WILL BE CONFIDENTIAL</p>
   <form action="/index.html">
 <input type="submit" value="Home">
     </form>
