--- a/response.html
+++ b/response.html
@@ -78,8 +78,6 @@ body {
   <a href="#">Contact</a>
 </div>
 
-<h2>Animated Sidenav Example</h2>
-<p>Click on the element below to open the side navigation menu.</p>
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
 
 <script>
@@ -91,7 +89,8 @@ function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
 }
 </script>
-  <form action="/index.html">
+
+ /* <form action="/index.html">
 <input type="submit" value="Home">
     </form>
   <form action="/bio.html">
@@ -108,7 +107,7 @@ function closeNav() {
   </form>
   <form action="/help">
 <input type="submit" value="Help">
-  </form>
+  </form>*/
   
   
   
