--- a/shop.html
+++ b/shop.html
@@ -259,10 +259,9 @@ function myFunction() {
 		</div>
 	
 
-<h2>Popup</h2>
 
-<div class="popup" onclick="myFunction()">Click me to toggle the popup!
-  <span class="popuptext" id="myPopup">A Simple Popup!</span>
+<div class="popup" onclick="myFunction()">BUY NOW
+  <span class="popuptext" id="myPopup">Sorry!This item has sold out.</span>
 </div>
 
 <script>
