--- a/response.html
+++ b/response.html
@@ -72,10 +72,12 @@ body {
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+  <a href="index.html">Home</a>
+  <a href="bio.html">About</a>
+  <a href="songs.html">Songs</a>
+  <a href="shops.html">Shop</a>
+  <a href="event.html">Events</a>
+  <a href="help.html">Help</a>
 </div>
 
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
@@ -89,27 +91,6 @@ function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
 }
 </script>
-
- /* <form action="/index.html">
-<input type="submit" value="Home">
-    </form>
-  <form action="/bio.html">
-<input type="submit" value="About">
-    </form>
-  <form action="/songs">
-<input type="submit" value="Songs">
-  </form>
-  <form action="/shop">
-<input type="submit" value="Shop">
-  </form>
-  <form action="/events">
-<input type="submit" value="Events">
-  </form>
-  <form action="/help">
-<input type="submit" value="Help">
-  </form>*/
-  
-  
   
 </body>
 </html>
