--- a/events.html
+++ b/events.html
@@ -146,47 +146,31 @@ function myFunction() {
 }
  <body>
   
-  /*First right sidebox*/
-  
-  <div class="sidebox">
-  
-    <p>Tickets for the 2019 world tour are out now!</p>
-  </div>
-  
-  
-  /*First left sidebox*/
-  
-  <div class="sidebox2">
-  
-    <h3>BUY NOW</H3>
-    <p>New T-shirts are selling out fast</p>
-  </div>
-  
-  
- /*Side box on the left 2*/
-  
-  <div class="sidebox3">
-  
-  <p>Artist is the highest sold artist recorded under the age of 18!</p>
-  </div>
-  
-  
-  /*Side box on the right 2*/
-  
-  <div class="sidebox3">
-  
-  <p>"Spring Day T-shirts are being released in</p>
-    <h3>10 HOURS</H3>
-  </div>
   
   /*This is where the code for the sideboxes ends*/
+   <section id="section-b">
+		<p align="center">
+		<br />
+	<h1>THE SLEEPING TOUR 2019</h1>
+		<br />
+		<br />
+		</p>
+	</section>
   
-  
-  
-  /*This is where the code for the tour dates begins*/
-  
-  /*TOUR CITY LIST ON THE RIGHT*/
-  <div class="list">
+	
+	<section id="section-d">
+
+		<div class="box-4">
+			<p>Tickets for the 2019 world tour are out now!
+		<br />
+		
+		</p>
+		
+    <a href="shop.html">BUY NOW</a>
+    <p>New T-shirts are selling out fast</p>
+		</div>
+
+		<div class="box-5">
 
    <ol>
   
@@ -227,9 +211,11 @@ function myFunction() {
       <li>Zurich,Switzerland</li>
   
   </ol>
-</div>
+
+		</div>
   
-  
+  	<div class="box-7">
+			
   <ol>
   
       <li>May 2 </li>
@@ -275,20 +261,30 @@ function myFunction() {
  </ol>       
   
   
-  /*The lists end here*/
+  
+		</div>
+
+	</section>
+
   
   
-  /*code for 'buy' buttons*/
+		<div class="box-6">
+			<p>  Artist is the highest sold artist recorded under the age of 18!
+		<br />
+	
+		</p>
+
+    <p> "Spring Day T-shirts are being released in</p>
+    <h3>10 HOURS</H3>
+		</div>
+
+	</section>
+   
   
-   <button type="button">Click Me!</button> 
-  /*trial for the popup*/
   
-   <div class="popup" onclick="myFunction()">Click me!
-      <span class="popuptext" id="myPopup">Popup text...</span>
-   </div> 
+  
+  
+  
  
-  /*trial ends*/
-  
-  
  </body>
  </html>
