--- a/help.html
+++ b/help.html
@@ -164,7 +164,7 @@
    <form action="/response.html" method="get">
   Contact Info.: <input type="text" name="ci"><br>
    </form>
- <p>Contact (956)785-468 company number or via email Hazelcorp.1@gmail.com
+ <p>Contact (956) 451-2068 (956) 266-8376 associate numbers or via email Hazelcorp.1@gmail.com
  </p>
 
  <div class="container">
