--- a/songs.html
+++ b/songs.html
@@ -171,24 +171,22 @@
   opacity: 1;
 }
   
+.song1:hover .overlay {
+  opacity: 1;
+}
+  
+  
+  
 .song2:hover .overlay {
   opacity: 1;
 }
-  
-  
-  
+    
 .song3:hover .overlay {
   opacity: 1;
 }
-    
-.song4:hover .overlay {
-  opacity: 1;
-}
   
   
-.song5:hover .overlay {
-  opacity: 1;
-}
+
   
 
 </style>
@@ -199,7 +197,7 @@
 <body>
   
 <div class="song1">
-  <img src="cover.jpg" alt="song cover" class="image">
+  <img src="thumpnail.PNG" alt="song cover" class="image">
   <div class="overlay">SONG/ALBUM NAME</div>
   <audio controls>
   <source src=" " type="audio/ogg"> /*ADD AUDIO*/
@@ -208,35 +206,28 @@ Your browser does not support the audio element.
 </audio>
 </div>
 
+<div class="song2">
+  <img src="thumpnail2.PNG" alt="song cover" class="image">
+  <audio controls>
+  <source src=" " type="audio/ogg"> /*ADD AUDIO*/
+  <source src=" " type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</div>
+
+
 <div class="song3">
-  <img src="cover.jpg" alt="song cover" class="image">
+  <img src="thumpnail3.PNG" alt="song cover" class="image">
   <audio controls>
   <source src=" " type="audio/ogg"> /*ADD AUDIO*/
   <source src=" " type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 </div>
+  
+  
+  
 
-
-<div class="song4">
-  <img src="cover.jpg" alt="song cover" class="image">
-  <audio controls>
-  <source src=" " type="audio/ogg"> /*ADD AUDIO*/
-  <source src=" " type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-</div>
-  
-  
-  
-<div class="song5">
-  <img src="cover.jpg" alt="song cover" class="image">
-  <audio controls>
-  <source src=" " type="audio/ogg"> /*ADD AUDIO*/
-  <source src=" " type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-</div>
 
   
  
