--- a/response.html
+++ b/response.html
@@ -75,8 +75,8 @@ body {
   <a href="index.html">Home</a>
   <a href="bio.html">About</a>
   <a href="songs.html">Songs</a>
-  <a href="shops.html">Shop</a>
-  <a href="event.html">Events</a>
+  <a href="shop.html">Shop</a>
+  <a href="events.html">Events</a>
   <a href="help.html">Help</a>
 </div>
 
