--- a/events.html
+++ b/events.html
@@ -21,12 +21,12 @@
   </div> 
   
  
-  <link href="events.css" rel="stylesheet" type="text/css">
   
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
   
-
+  <link href="events.css" rel="stylesheet" type="text/css">
+	
   <script>
 // When the user clicks on <div>, open the popup
 function myFunction() {
@@ -144,6 +144,8 @@ function myFunction() {
     text-align: left;
   }
 }
+	</style>
+	
  <body>
   
   
