--- a/songs.html
+++ b/songs.html
@@ -137,7 +137,7 @@
   max-width: 300px;
 }
 /*Added trying to make another song box */
-  .song2 {
+  .song1 {
   position: relative;
   width: 100%;
   max-width: 300px;
@@ -208,6 +208,7 @@ Your browser does not support the audio element.
 
 <div class="song2">
   <img src="thumpnail2.PNG" alt="song cover" class="image">
+  <div class="overlay">SONG/ALBUM NAME</div>
   <audio controls>
   <source src=" " type="audio/ogg"> /*ADD AUDIO*/
   <source src=" " type="audio/mpeg">
@@ -218,6 +219,7 @@ Your browser does not support the audio element.
 
 <div class="song3">
   <img src="thumpnail3.PNG" alt="song cover" class="image">
+  <div class="overlay">SONG/ALBUM NAME</div>
   <audio controls>
   <source src=" " type="audio/ogg"> /*ADD AUDIO*/
   <source src=" " type="audio/mpeg">
