--- a/songs.html
+++ b/songs.html
@@ -142,6 +142,21 @@
   width: 100%;
   max-width: 300px;
 }
+  
+  /*Added trying to make another song box */
+  .song2 {
+  position: relative;
+  width: 100%;
+  max-width: 300px;
+}
+
+  /*Added trying to make another song box */
+  .song3 {
+  position: relative;
+  width: 100%;
+  max-width: 300px;
+}
+
 
 /* image to responsive */
 .image {
