--- a/events.html
+++ b/events.html
@@ -273,11 +273,10 @@ function myFunction() {
 		<div class="box-6">
 			<p>  Artist is the highest sold artist recorded under the age of 18!
 		<br />
-	
+	"Spring Day T-shirts are being released in
 		</p>
-
-    <p> "Spring Day T-shirts are being released in</p>
-    <h3>10 HOURS</H3>
+   
+    		<h3>10 HOURS</H3>
 		</div>
 
 	</section>
