--- a/songs.html
+++ b/songs.html
@@ -222,7 +222,7 @@ Your browser does not support the audio element.
 </div>
 
 <div class="song2">
-  <img src="thumpnail2.PNG" alt="song cover" class="image">
+  <img src="thumb2.PNG" alt="song cover" class="image">
   <div class="overlay">SONG/ALBUM NAME</div>
   <audio controls>
   <source src=" " type="audio/ogg"> /*ADD AUDIO*/
@@ -233,7 +233,7 @@ Your browser does not support the audio element.
 
 
 <div class="song3">
-  <img src="thumpnail3.PNG" alt="song cover" class="image">
+  <img src="thumb.3.PNG" alt="song cover" class="image">
   <div class="overlay">SONG/ALBUM NAME</div>
   <audio controls>
   <source src=" " type="audio/ogg"> /*ADD AUDIO*/
