--- a/events.html
+++ b/events.html
@@ -173,8 +173,8 @@ function myFunction() {
 		</div>
 
 		<div class="box-5">
-
-   <ul>
+			
+<ul style="list-style-type:none;">
   
       <li>Albany,NY,USA</li>
       <li>Boston,MA,USA</li>
@@ -218,7 +218,9 @@ function myFunction() {
   
   	<div class="box-7">
 			
-  <ul>
+  
+<ul style="list-style-type:none;">
+  
   
       <li>May 2 </li>
       <li>May 3</li>
