--- a/songs.html
+++ b/songs.html
@@ -215,7 +215,7 @@
   <img src="thumpnail.PNG" alt="song cover" class="image">
   <div class="overlay">SONG/ALBUM NAME</div>
   <audio controls>
-  <source src=" " type="audio/ogg"> /*ADD AUDIO*/
+  <source src=" " type="Culture Code - Make Me Move (feat. Karra) [NCS Release].mp3"> /*ADD AUDIO*/
   <source src=" " type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
@@ -225,7 +225,7 @@ Your browser does not support the audio element.
   <img src="thumb2.PNG" alt="song cover" class="image">
   <div class="overlay">SONG/ALBUM NAME</div>
   <audio controls>
-  <source src=" " type="audio/ogg"> /*ADD AUDIO*/
+  <source src=" " type="Lundh - Let Go (feat. Safia).mp3"> /*ADD AUDIO*/
   <source src=" " type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
@@ -236,7 +236,7 @@ Your browser does not support the audio element.
   <img src="thumb.3.PNG" alt="song cover" class="image">
   <div class="overlay">SONG/ALBUM NAME</div>
   <audio controls>
-  <source src=" " type="audio/ogg"> /*ADD AUDIO*/
+  <source src=" " type="Feint ft Veela – Vagrant [Without Copyright].mp3"> /*ADD AUDIO*/
   <source src=" " type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
