--- a/songs.html
+++ b/songs.html
@@ -220,7 +220,48 @@
 Your browser does not support the audio element.
 </audio>
 </div>
-
+<p>Open eyes.
+Through the waves cut through me.
+Hypnotised.
+By the sounds I'm breatthing in.
+Hold tight, hold tight.
+Can't make calls collide.
+Hold tight, hold tight, hold tight.
+Tripping lights.
+Paint the skies.
+All because of you.
+Tripping lights.
+Paint the skies.
+Only you can make me move.
+You, you can make me moveee.
+Can make me moveee.
+You you can make me moveee.
+Can make me.
+Move.
+You, you can make me moveee.
+Can make me.
+So alive.
+Make it last forever Stopping tight.
+Your arms surrendering.
+Hold tight, hold tight.
+Can't make calls collide.
+Hold tight, hold tight, hold tight.
+Tripping lights.
+Paint the skies.
+All because of you.
+Tripping lights.
+Paint the skies.
+Only you can make me moveee.
+You, you can make me moveee.
+Can make me moveee.
+You you can make me moveee.
+Can make me.
+Move.
+Can make me moveee.
+You, you can make me moveee.
+Can make meee.
+</p>
+  
 <div class="song2">
   <img src="thumb2.PNG" alt="song cover" class="image">
   <div class="overlay">SONG/ALBUM NAME</div>
@@ -230,7 +271,46 @@ Your browser does not support the audio element.
 Your browser does not support the audio element.
 </audio>
 </div>
-
+  <p>
+I just want to move on
+So I have got to be strong
+I know I have to go on
+That's why
+And now I know what to do
+Although I know it hurts you
+But I just can't follow trough
+I've got to let go off you
+Oh I've got to let go
+I've got to let go off you
+Oh I got to let go
+I've got to let go off you
+Oh I've got to let go
+I've got to let go off you
+Oh I've got to let go
+You ohh ohh ohh
+Off you ohh ohh
+Off you ohhh ohhh ohh
+Off you ohh ohh
+Off you
+Break my way out as I go
+Find who I am as I know
+Meet my own stage in my show
+That's why
+I've got to be who I am
+I'm gonna be myself again
+So this is the end
+I've got to let go off you (let go)
+Oh I've got to let go
+I've got to let go off you
+Oh I got to let go
+(I let go)
+I've got to let go off you
+Oh I've got to let go
+(Off you ohh ohh ohh)
+I've got to let go off you
+Oh I got to let got to let go off you
+Oh I've got to let go
+  </p>
 
 <div class="song3">
   <img src="thumb.3.PNG" alt="song cover" class="image">
@@ -241,7 +321,51 @@ Your browser does not support the audio element.
 Your browser does not support the audio element.
 </audio>
 </div>
-  
+  <p>There's a reason she's alone
+You can't pin her down
+Because no one needs her home
+Or needs her around, she says
+"There's beauty in the hills
+A chip in the sky
+So don't be sad because I roam
+It keeps me alive."
+
+To impress her - it's too damn hard
+To stay loyal without going too far
+If I see her again promise I won't
+Cry
+
+She wasn't back tonight
+And I don't know about you
+My money's on the night
+It takes her away like I do
+My charm is twinkling out of her eyes
+Of her eyes
+
+She will never grow old
+Or change her mind
+She'll talk about it later on
+From seeing sights
+There's something wonderful and odd
+About the escape
+While you want them to be gone
+You want them to stay
+
+To impress her it's just so damn hard
+I want her back, please don't go too far
+If I see her again promise I won't
+Cry
+
+She doesn't come back much
+No one misses her like I do
+I hope she's having fun
+Doing what she wants to
+And send a postcard or two from the sights
+Sometime
+To impress her is just too damn hard
+And I want her back but she's gone too far
+If I see her again, promise I won't
+Cry</p>
   
   
 
