--- a/songs.html
+++ b/songs.html
@@ -220,6 +220,7 @@
 Your browser does not support the audio element.
 </audio>
 </div>
+  <h2>Lyrics</h2>
 <p>Open eyes.
 Through the waves cut through me.
 Hypnotised.
@@ -271,6 +272,7 @@ Can make meee.
 Your browser does not support the audio element.
 </audio>
 </div>
+  <h2>Lyrics</h2>
   <p>
 I just want to move on
 So I have got to be strong
@@ -321,6 +323,7 @@ Oh I've got to let go
 Your browser does not support the audio element.
 </audio>
 </div>
+  <h2>Lyrics</h2>
   <p>There's a reason she's alone
 You can't pin her down
 Because no one needs her home
