--- a/songs.html
+++ b/songs.html
@@ -215,11 +215,10 @@
   <img src="thumpnail.PNG" alt="song cover" class="image">
   <div class="overlay">SONG/ALBUM NAME</div>
   <audio controls>
-  <source src=" " type="Culture Code - Make Me Move (feat. Karra) [NCS Release].mp3"> /*ADD AUDIO*/
-  <source src=" " type="audio/mpeg">
-Your browser does not support the audio element.
+    <source src="Culture Code - Make Me Move (feat. Karra) [NCS Release].mp3" type="audio/mpeg">
 </audio>
 </div>
+  
   <h2>Lyrics</h2>
 <p>Open eyes.
 Through the waves cut through me.
@@ -267,9 +266,7 @@ Can make meee.
   <img src="thumb2.PNG" alt="song cover" class="image">
   <div class="overlay">SONG/ALBUM NAME</div>
   <audio controls>
-  <source src=" " type="Lundh - Let Go (feat. Safia).mp3"> /*ADD AUDIO*/
-  <source src=" " type="audio/mpeg">
-Your browser does not support the audio element.
+    <source src="Lundh - Let Go (feat. Safia).mp3" type="audio/mpeg">
 </audio>
 </div>
   <h2>Lyrics</h2>
@@ -318,11 +315,10 @@ Oh I've got to let go
   <img src="thumb.3.PNG" alt="song cover" class="image">
   <div class="overlay">SONG/ALBUM NAME</div>
   <audio controls>
-  <source src=" " type="Feint ft Veela – Vagrant [Without Copyright].mp3"> /*ADD AUDIO*/
-  <source src=" " type="audio/mpeg">
-Your browser does not support the audio element.
+    <source src="Feint ft Veela – Vagrant [Without Copyright].mp3" type="audio/mpeg">
 </audio>
 </div>
+  
   <h2>Lyrics</h2>
   <p>There's a reason she's alone
 You can't pin her down
