--- a/shop.html
+++ b/shop.html
@@ -245,6 +245,21 @@ function myFunction() {
 		
 	</section>
 	
+	
+	<section id="section-f">
+	<div class="box-10">
+
+	</div>
+	<div class="box-11">
+
+	</div>
+		<div class="box-12">
+	
+	</div>
+		
+	</section>
+	
+	
 	<section id="section-d">
 
 <section id="section-d">
@@ -252,7 +267,9 @@ function myFunction() {
 		<div class="box-4">
 			<p> TOKYO TOUR
 		<br />
-		The limited edition Tokyo Tour shirt comes from the Minimalism© line in its signature white.
+		The limited edition Tokyo Tour shirt comes from the Minimalism line in its signature white.
+				<br />
+				$34.99
 		</p>
 		
 
@@ -260,22 +277,13 @@ function myFunction() {
 	
 
 
-<div class="popup" onclick="myFunction()">BUY NOW
-  <span class="popuptext" id="myPopup">Sorry!This item has sold out.</span>
-</div>
-
-<script>
-// When the user clicks on div, open the popup
-function myFunction() {
-  var popup = document.getElementById("myPopup");
-  popup.classList.toggle("show");
-}
-</script>
 		<div class="box-5">
 
-			<p> MINIMALISM© Sticker
+			<p> MINIMALISM Sticker
 		<br />
 	Signature laptop sticker of Hazel brought to you by the FIERCExHazel line.
+				<br />
+				$10.99
 		</p>
 
 		</div>
@@ -284,6 +292,8 @@ function myFunction() {
 			<p> Ringed Cap
 		<br />
 		A FIERCExHazel line cap. The legendary cap that sold out in seconds last time it was avaliable.
+				<br />
+				$24.99
 		</p>
 
 		</div>
@@ -292,7 +302,43 @@ function myFunction() {
   
   
   
-  
+  <section id="section-e">
+
+		<div class="box-7">
+			<p> Tokyo Bracelet
+		<br />
+		The Tokyo Tour bracelet was one of the first items that Hazel released.
+				<br />
+				$20.99
+		</p>
+		
+
+		</div>
+	
+
+
+		<div class="box-8">
+
+			<p>Tokyo '18 Hoodie
+		<br />
+	An essential black hoodie for any wardrobe.
+				<br />
+				$45.99
+		</p>
+
+		</div>
+
+		<div class="box-9">
+			<p> Fan Necklace
+		<br />
+		A simple necklace so that all can know you support Hazel.
+				<br />
+				$20.99
+		</p>
+
+		</div>
+
+	</section>
   
   
   
