--- a/events.html
+++ b/events.html
@@ -225,20 +225,20 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="img_nature_wide.jpg" style="width:100%">
-  <div class="text">Caption Text</div>
+  <img src="ScitechWebmaster.github.io/slideshow.jpg" style="width:100%">
+  <div class="text">Tokyo</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
+  <div class="ScitechWebmaster.github.io/slideshow2.jpg">2 / 3</div>
   <img src="img_snow_wide.jpg" style="width:100%">
-  <div class="text">Caption Two</div>
+  <div class="text">Canada</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="img_mountains_wide.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+  <img src="ScitechWebmaster.github.io/slideshow3.jpg" style="width:100%">
+  <div class="text">USA</div>
 </div>
 
 </div>
