--- a/events.html
+++ b/events.html
@@ -157,6 +157,7 @@ img {vertical-align: middle;}
   max-width: 1000px;
   position: relative;
   margin: auto;
+ height:20%;
 }
 
 /* Caption text */
@@ -230,8 +231,8 @@ img {vertical-align: middle;}
 </div>
 
 <div class="mySlides fade">
-  <div class="ScitechWebmaster.github.io/slideshow4.jpg">2 / 3</div>
-  <img src="img_snow_wide.jpg" style="width:100%">
+  <div class="numbertext">2 / 3</div>
+  <img src="ScitechWebmaster.github.io/stadium.jpg" style="width:100%">
   <div class="text">Canada</div>
 </div>
 
