--- a/help.html
+++ b/help.html
@@ -134,6 +134,17 @@
   position: relative;
 }
 
+.text-block{
+  postition:center;
+
+}
+
+.responseform{
+ text-align:center;
+ font-family: "Arial", Helvetica, sans-serif;
+ width:50%;
+}
+
 /* Bottom right text */
 .text-block {
   font-family: "Arial", Helvetica, sans-serif;
@@ -160,6 +171,7 @@
   </div>
 </div> 
 
+<div class="responseform">
     <h2>Contact Info or Quick Response</h2>
   <form action="/response.html" method="get">
   First Name: <input type="text" name="fname"><br>
@@ -175,7 +187,7 @@
    </form>
  <p>Contact (956) 451-2068 (956) 266-8376 associate numbers or via email Hazelcorp.1@gmail.com
  </p>
-
+</div>
   
  </body>
  </html>
