--- a/help.html
+++ b/help.html
@@ -142,7 +142,7 @@
 .responseform{
  text-align:center;
  font-family: "Arial", Helvetica, sans-serif;
- width:50%;
+ width:100%;
 }
 
 /* Bottom right text */
@@ -164,7 +164,7 @@
 
  
  <div class="container">
-  <img src="ScitechWebmaster.github.io/Photos Used/help2.jpg" alt="Her Concert!" style="width:100%;">
+  <img src="ScitechWebmaster.github.io/help.jpg" alt="Her Concert!" style="width:100%;">
   <div class="text-block">
     <h2>Missing Tickets? Don't Know How to Order Merchandise?</h2>
     <h4>We can help.</h4>
