--- a/help.html
+++ b/help.html
@@ -164,7 +164,7 @@
 
  
  <div class="container">
-  <img src="ScitechWebmaster.github.io/help.jpg" alt="Her Concert!" style="width:100%;">
+  <img src="ScitechWebmaster.github.io/Photos Used/help2.jpg" alt="Her Concert!" style="width:100%;">
   <div class="text-block">
     <h2>Missing Tickets? Don't Know How to Order Merchandise?</h2>
     <h4>We can help.</h4>
