--- a/songs.html
+++ b/songs.html
@@ -326,7 +326,7 @@ Oh I've got to let go
     
     
 <div class="song3">
-  <img src="thumb.3.PNG" alt="song cover" class="image">
+  <img src="ScitechWebmaster.github.io/cover 3.jpg" alt="song cover" class="image">
   <div class="overlay">Feint</div>
   <audio controls>
     <source src="Feint ft Veela – Vagrant [Without Copyright].mp3" type="audio/mpeg">
