--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ body, html {
   background-size: cover;
 }
 /* Images used */
-.img1 { background-image: url(mickey.gif); }
+.img1 { background-image: url(ScitechWebmaster.github.io/gif1.gif); }
 .img2 { background-image: url("minnie.gif"); }
 .img3 { background-image: url("bird.gif"); }
 .img4 { background-image: url("dance.gif"); }
