--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ body, html {
 }
 .bg-image {
   /* Full height */
-  height: 50%; 
+  height: 60%; 
   
   /* Center and scale the image nicely */
   background-position: center;
@@ -150,11 +150,11 @@ body, html {
 }
 /* Images used */
 .img1 { background-image: url(ScitechWebmaster.github.io/gif1.gif); }
-.img2 { background-image: url("minnie.gif"); }
-.img3 { background-image: url("bird.gif"); }
-.img4 { background-image: url("dance.gif"); }
-.img5 { background-image: url("depression.gif"); }
-.img6 { background-image: url("trumpet.gif"); }
+.img2 { background-image: url(ScitechWebmaster.github.io/gif2.gif); }
+.img3 { background-image: url(ScitechWebmaster.github.io/gif3.gif); }
+.img4 { background-image: url(ScitechWebmaster.github.io/gif4.gif); }
+.img5 { background-image: url(ScitechWebmaster.github.io/gif5.gif); }
+.img6 { background-image: url(ScitechWebmaster.github.io/gif6.gif); }
 /* Position text in the middle of the page/image */
 .bg-text {
   background-color: rgb(0,0,0); /* Fallback color */
