--- a/songs.html
+++ b/songs.html
@@ -146,21 +146,24 @@
 /*Added trying to make another song box */
   .song1 {
   position: relative;
-  width: 50%;
+  width: 100%;
+  align: center;
   max-width: 300px;
 }
   
   /*Added trying to make another song box */
   .song2 {
   position: relative;
-  width: 50%;
+  width: 100%;
+  align: center;
   max-width: 300px;
 }
 
   /*Added trying to make another song box */
   .song3 {
   position: relative;
-  width: 50%;
+  width: 100%;
+  align:center;
   max-width: 300px;
 }
 
