--- a/songs.html
+++ b/songs.html
@@ -173,12 +173,14 @@
   display: block;
   width: 100%;
   height: auto;
+  align:center;
 }
 
 /* The overlay */
 .overlay {
   position: absolute; 
   bottom: 0; 
+  align:center;
   background: rgb(0, 0, 0);
   background: rgba(0, 0, 0, 0.5); /* Black see-through */
   color: #f1f1f1; 
@@ -231,7 +233,9 @@
   
   <div class="lyrics1">
   <h2>Lyrics</h2>
-<p>Open eyes.
+<p>
+  <br />
+  Open eyes.
 Through the waves cut through me.
 Hypnotised.
 By the sounds I'm breatthing in.
