--- a/songs.html
+++ b/songs.html
@@ -145,7 +145,7 @@
 }
 /*Added trying to make another song box */
   .song1 {
-  position: relative;
+  position: center;
   width: 100%;
   align: center;
   max-width: 300px;
@@ -153,7 +153,7 @@
   
   /*Added trying to make another song box */
   .song2 {
-  position: relative;
+  position: center;
   width: 100%;
   align: center;
   max-width: 300px;
@@ -161,7 +161,7 @@
 
   /*Added trying to make another song box */
   .song3 {
-  position: relative;
+  position: center;
   width: 100%;
   align:center;
   max-width: 300px;
