--- a/songs.html
+++ b/songs.html
@@ -232,7 +232,7 @@
 </div>
   
   <div class="lyrics1">
-  <h2>Lyrics</h2>
+  <h2 stlye="align-text:center;">Lyrics</h2>
 <p>
   <br />
   Open eyes.
@@ -288,7 +288,7 @@ Can make meee.
 </div>
   
   <div class="lyrics2">
-  <h2>Lyrics</h2>
+  <h2 stlye="align-text:center;">Lyrics</h2>
   <p>
 I just want to move on
 So I have got to be strong
@@ -342,7 +342,7 @@ Oh I've got to let go
  
   
   <div class="lyrics3">
-  <h2>Lyrics</h2>
+  <h2 stlye="align-text:center;">Lyrics</h2>
   <p>There's a reason she's alone
 You can't pin her down
 Because no one needs her home
