--- a/events.html
+++ b/events.html
@@ -226,19 +226,19 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="ScitechWebmaster.github.io/slideshow.jpg" style="width:100%;height:20%;">
+  <img src="ScitechWebmaster.github.io/final.jpg" style="width:100%;height:20%;">
   <div class="text">Tokyo</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="ScitechWebmaster.github.io/stadium.jpg" style="width:100%;height:20%;">
+  <img src="ScitechWebmaster.github.io/final2.jpg" style="width:100%;height:20%;">
   <div class="text">Canada</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="ScitechWebmaster.github.io/slideshow5.jpg" style="width:100%;height:20%;">
+  <img src="ScitechWebmaster.github.io/final3.jpg" style="width:100%;height:20%;">
   <div class="text">USA</div>
 </div>
 
