--- a/team.html
+++ b/team.html
@@ -184,7 +184,7 @@
 		<div class="box-4">
 			<p> Hannah Garcia
 		<br />
-		Positions: Team Leader, Presenter, HTML & CSS Programmer, Media Specialist, HTML team specialist.
+		Positions: Team Leader, Presenter, HTML & CSS Programmer, Media Specialist, CSS team specialist.
 		</p>
 		
 
@@ -194,7 +194,7 @@
 
 			<p> Caleb Gomez
 		<br />
-		Positions: Assistant-Leader, Presenter, HTML & CSS Programmer, and HTML team specialist.
+		Positions: Assistant-Leader, Presenter, HTML & CSS Programmer, and Java team specialist.
 		</p>
 
 		</div>
@@ -202,7 +202,7 @@
 		<div class="box-6">
 			<p> Kashish Kumar
 		<br />
-		Positions: Member, Presenter, HTML & CSS Programmer, JavaScript Specialist, and CSS specialist.
+		Positions: Member, Presenter, HTML & CSS Programmer, and JavaScript Specialist.
 		</p>
 
 		</div>
