--- a/events.html
+++ b/events.html
@@ -286,13 +286,12 @@ function showSlides() {
 	<section id="section-d">
 
 		<div class="box-4">
-			<p>Tickets for the 2019 world tour are out now!
+			<p>New T-shirts are selling out fast
 		<br />
 		
 		</p>
 		
-    <a href="shop.html">BUY NOW</a>
-    <p>New T-shirts are selling out fast</p>
+    <a href="shop.html" style="color:white;font-weight:bold;">BUY NOW</a>
 		</div>
 
 		<div class="box-5">
