--- a/events.html
+++ b/events.html
@@ -291,7 +291,7 @@ function showSlides() {
 		
 		</p>
 		
-    <a href="shop.html" style="color:white;font-weight:bold;">BUY NOW</a>
+    <a href="shop.html" style="font-weight:bold;">BUY NOW</a>
 		</div>
 
 		<div class="box-5">
