--- a/shop.html
+++ b/shop.html
@@ -20,6 +20,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
+      <a href="ScitechWebmaster.github.io/brief.pdf">Design Brief</a>
       <a href="ScitechWebmaster.github.io/worklog.pdf">Work Log</a>
       <a href="ScitechWebmaster.github.io/CopyRight&tPhotoRelease.pdf">Copy Right Checklist</a>
       <a href="ScitechWebmaster.github.io/LEAP.pdf">LEAP Form</a>
