--- a/response.html
+++ b/response.html
@@ -3,24 +3,24 @@
 <html>
 <body>
 
-<h1>Response Page</h1>
-<p>Thank you for your response</p> 
+<h1 style="align-text:center;">Response Page</h1>
+<p style="align-text:center;">Thank you for your response</p> 
 <?php
 echo $_GET["fname"]; 
 ?> 
   <?php
 echo $_GET["lname"]; 
 ?> 
-<p>We will get right back to you once a provider is available.</p>
+<p style="align-text:center;">We will get right back to you once a provider is available.</p>
   
  <?php
 echo $_GET["cc"]; 
 ?> 
-  <p>Thanks for the comment or consern we'll get back to you momentarily.</p>
+  <p style="align-text:center;">Thanks for the comment or consern we'll get back to you momentarily.</p>
   <?php
 echo $_GET["ci"]; 
 ?> 
-  <p>CONTACT INFO WILL BE CONFIDENTIAL</p>
+  <p style="align-text:center;">CONTACT INFO WILL BE CONFIDENTIAL</p>
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
