--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="ScitechWebmaster.github.io/brief.pdf">Design Brief</a>
       <a href="ScitechWebmaster.github.io/worklog.pdf">Work Log</a>
       <a href="ScitechWebmaster.github.io/CopyRight&tPhotoRelease.pdf">Copy Right Checklist</a>
-      <a href="ScitechWebmaster.github.io/LEAP.pdf">LEAP Form</a>
+      <a href="ScitechWebmaster.github.io/leapfinal.pdf">LEAP Form</a>
     </div>
   </div> 
   
