--- a/shop.html
+++ b/shop.html
@@ -230,7 +230,7 @@ function myFunction() {
 	<h1>OFFICIAL MERCHANDISE</h1>
 		<br />
 		<br />
-			Thank you for buying!!! -H
+			Thank you for buying!!! -Hazel
 		</p>
 	</section>
 	<section id="section-c">
